# ouroboros-programs

./: Anchor.toml  README.md  package.json
programs/gauges/: Cargo.toml
programs/gauges/src/: lib.rs
programs/gauges/src/instructions/: collect_rewards.rs  create_gauge.rs  deposit_liquidity.rs  mod.rs
programs/gauges/src/state/: gauge.rs  mod.rs  staker.rs
programs/ouroboros/: Cargo.toml
programs/ouroboros/src/: errors.rs  lib.rs
programs/ouroboros/src/instructions/: cast_vote.rs  claim_incentives.rs  collect_fees.rs  create_beneficiary.rs  create_locker.rs  initialize_locker.rs  initialize_ouroboros.rs  initialize_vote.rs  mod.rs  receive_asset.rs  reset_vote.rs
programs/ouroboros/src/state/: asset.rs  beneficiary.rs  claimant.rs  locker.rs  mod.rs  ouroboros.rs  snapshot.rs
programs/pools/: Cargo.toml
programs/pools/src/: errors.rs  lib.rs
programs/pools/src/instructions/: add_liquidity.rs  claim_fees.rs  create_pair.rs  mod.rs  remove_liquidity.rs  swap_exact_input.rs
programs/pools/src/state/: factory.rs  mod.rs  pair.rs
tests/: ouroboros.ts  pools.ts
tests/suites/: addLiquidity.ts  createLocker.ts  createPair.ts  initializeOuroboros.ts  removeLiquidity.ts  swapExactInput.ts
tests/suites/ouroboros/: castVote.ts  claimIncentives.ts  createBeneficiary.ts  createLocker.ts  initializeOuroboros.ts  receiveAsset.ts
tests/suites/pools/: addLiquidity.ts  createPair.ts  removeLiquidity.ts  swapExactInput.ts
ts/: asset.ts  beneficiary.ts  index.ts  locker.ts  ouroboros.ts  types.ts
