[package]
name = "gauges"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gauges"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
pools = { path = "../pools", features = ["cpi"] }
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
thiserror = "1.0.30"
